# enumcombinatorics

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: permutation.rs
src/: combination.rs  lib.rs  multichoose.rs  permutation.rs  sequence.rs
