[package]
name = "enumcombinatorics"
version = "0.1.0"
authors = ["osanshouo <53166653+osanshouo@users.noreply.github.com>"]
edition = "2018"

license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
streaming-iterator = { version = "0.1.4", optional = true }

[features]
default = []
streaming = [ "streaming-iterator", ]
